--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "main": "./server.js",
     "dependencies": {
         "express": "3.x",
+        "ejs": "0.7.x",
         "mongodb": "",
         "mongoose": "",
         "async": "",
@@ -17,7 +18,11 @@
         "node-gravatar": "",
         "oauth2orize": "0.x.x",
         "passport": "~0.1.12",
+        "passport-local": "0.1.x",
+        "passport-http": "0.2.x",
+        "passport-http-bearer": "0.2.x",
         "passport-oauth2-client-password": "0.1.x",
+        "connect-ensure-login": "0.1.x",
         "appsecute-connector-api": "git://github.com/Appsecute/appsecute-connector-api-nodejs.git"
     }
 }
