--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "appsecute-connector-tender",
     "description": "A connector for hooking Tender Support into Appsecute.",
-    "version":"0.0.1",
+    "version": "0.0.1",
     "private": false,
     "main": "./server.js",
     "dependencies": {
@@ -24,5 +24,12 @@
         "passport-oauth2-client-password": "0.1.x",
         "connect-ensure-login": "0.1.x",
         "appsecute-connector-api": "git://github.com/Appsecute/appsecute-connector-api-nodejs.git"
+    },
+    "subdomain": "appsecute.appsecute-connector-tender",
+    "scripts": {
+        "start": "server.js"
+    },
+    "engines": {
+        "node": "0.8.x"
     }
 }
