--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "oauth2orize": "0.x.x",
         "passport": "~0.1.12",
         "passport-local": "0.1.x",
+        "passport-oauth": "0.1.x",
         "passport-http": "0.2.x",
         "passport-http-bearer": "0.2.x",
         "passport-oauth2-client-password": "0.1.x",
